force-app/main/default/objects/cpm__Heartbeat__c/cpm__Heartbeat__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Heartbeats</label>
</CustomObject>