force-app/main/default/objects/cpm__Heartbeat__c/fields/cpm__Class__c.field-meta.xml
<CustomField>
    <fullName>cpm__Class__c</fullName>
    <label>Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>