force-app/main/default/objects/cpm__Heartbeat__c/fields/cpm__Last_run_date__c.field-meta.xml
<CustomField>
    <fullName>cpm__Last_run_date__c</fullName>
    <label>Last run date</label>
    <type>DateTime</type>
</CustomField>