force-app/main/default/objects/cpm__Heartbeat__c/fields/cpm__Namespace__c.field-meta.xml
<CustomField>
    <fullName>cpm__Namespace__c</fullName>
    <label>Namespace</label>
    <length>15</length>
    <type>Text</type>
</CustomField>