force-app/main/default/objects/cpm__Heartbeat__c/fields/cpm__Order__c.field-meta.xml
<CustomField>
    <fullName>cpm__Order__c</fullName>
    <label>Order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>