force-app/main/default/objects/cpm__Heartbeat__c/fields/cpm__Starting_Hour__c.field-meta.xml
<CustomField>
    <fullName>cpm__Starting_Hour__c</fullName>
    <label>Starting Hour</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>